[package]
name = "pe-wasm"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
goblin = "0.2.1"
wasm-bindgen = "0.2.60"
serde_json = "1.0.51"
serde = { version = "1.0.106", features = ["derive"] }
